// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddLabelsForm render should render a base action 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="add_input_labels"
  title="Add Labels"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "component": [Function],
        "description": "Label the incoming message",
        "form": [Function],
        "name": "Add Labels",
        "type": "add_input_labels",
      }
    }
    onChange={[MockFunction]}
  />
  <p
    data-spec="label"
  >
    <Trans
      i18nKey="forms.add_labels.summary"
    >
      Select the labels to apply to the incoming message.
    </Trans>
  </p>
  <AssetSelector
    assets={
      Object {
        "items": Object {},
        "type": "label",
      }
    }
    createAssetFromInput={[Function]}
    createPrefix="Create Label: "
    entry={
      Object {
        "value": Array [
          Object {
            "id": "232b99d1-579f-4d7f-b750-4b034927e9f8",
            "name": "Help",
            "type": "label",
          },
          Object {
            "id": "ab58dffa-98da-40ba-bebc-489ec6ff7170",
            "name": "Feedback",
            "type": "label",
          },
        ],
      }
    }
    multi={true}
    name="Labels"
    onAssetCreated={[Function]}
    onChange={[Function]}
    placeholder="Enter the name of an existing label or create a new one"
    searchable={true}
  />
</Dialog>
`;

exports[`AddLabelsForm updates should allow switching from router: switch from router 1`] = `
Array [
  Object {
    "labels": Array [
      Object {
        "name": "Feedback",
        "uuid": "feedback_label",
      },
    ],
    "type": "add_input_labels",
    "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
  },
]
`;

exports[`AddLabelsForm updates should update and save 1`] = `
Object {
  "labels": Object {
    "validationFailures": Array [],
    "value": Array [
      Object {
        "id": "feedback_label",
        "name": "Feedback",
        "type": "label",
      },
    ],
  },
  "valid": true,
}
`;

exports[`AddLabelsForm updates should update and save: update label 1`] = `
Array [
  Object {
    "labels": Array [
      Object {
        "name": "Feedback",
        "uuid": "feedback_label",
      },
    ],
    "type": "add_input_labels",
    "uuid": "aa15ef19-da81-43d0-b6e5-84b47216aeb8",
  },
]
`;
